# flights-exploration

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pull_request.yml  push.yml
flights_exploration/: constants.py  read.py
flights_exploration/data/readers/: __init__.py  base.py  kaggle.py
flights_exploration/tests/: utils.py
flights_exploration/tests/data/readers/: test_kaggle.py
flights_exploration/tests/static/: kaggle.csv
